--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>index</title>
 </head>
 <body>
-    <h3 align="center">A passionate frontend developer from India</h3>
+    <h3 align="center">A frontend developer from Thanachok</h3>
 
     <p align="left"> <a href="https://github.com/ryo-ma/github-profile-trophy"><img src="https://github-profile-trophy.vercel.app/?username=thanachok11" alt="thanachok11" /></a> </p>
     
