--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li>🔭 I’m studying <strong>KhonKhan University</strong></li>
                 <li>🌱 I want to learn <strong>Javascript</strong></li>
                 <li>📫 How to reach me: <strong>thanachok.suwan@gmail.com</strong></li>
+                <li>OOP work 1.https://github.com/thanachok11/Final-Project.Boss-1.git</li>
             </ul>
         </div>
         <div class="connect">
