--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
                 <li>🔭 I’m studying <strong>KhonKhan University</strong></li>
                 <li>🌱 I want to learn <strong>Javascript</strong></li>
                 <li>📫 How to reach me: <strong>thanachok.suwan@gmail.com</strong></li>
-                <li>OOP work 1.https://github.com/thanachok11/Final-Project.Boss-1.git</li>
+                <li>ID Student:<strong>653450287-7</strong></li>
+                <li>frontend 1. <a class =" button-front"href="https://github.com/thanachok11/front-end-1.git">click</a> </li>
+                <li>OOP work 1.<a class ="button-oop "href="https://github.com/thanachok11/Final-Project.Boss-1.git">click</a></li>
             </ul>
         </div>
         <div class="connect">
@@ -25,11 +27,11 @@
             <a href="https://twitter.com/thanachok11" target="_blank">
                 <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/twitter.svg" alt="thanachok11" height="30" width="40">
             </a>
-            <a href="https://fb.com/thanachok boss" target="_blank">
+            <a href="https://fb.com/thanachokboss" target="_blank">
                 <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/facebook.svg" alt="thanachok boss" height="30" width="40">
             </a>
-            <a href="https://instagram.com/bossthan__" target="_blank">
-                <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg" alt="bossthan__" height="30" width="40">
+            <a href="https://instagram.com/bosstha__" target="_blank">
+                <img src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg" alt="bosstha__" height="30" width="40">
             </a>
         </div>
         <div class="skills">
