--- a/pokedex/details/type.html
+++ b/pokedex/details/type.html
@@ -23,6 +23,7 @@
 <body>
     <div class="container">
         <h1 id="type-name">Loading...</h1>
+        <button class="btn btn-primary mb-2" onclick="goBack()">Back</button>
         <div id="type-details" class="row"></div>
     </div>
     <script>
@@ -66,6 +67,9 @@
                 document.getElementById('type-name').textContent = 'Type not found';
             }
         });
+        function goBack() {
+            window.history.back();
+        }
     </script>
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
