--- a/pokedex/details/details.html
+++ b/pokedex/details/details.html
@@ -42,7 +42,7 @@
             background-color: #ffebcd;
             border-bottom-left-radius: 15px;
             border-bottom-right-radius: 15px;
-            text-decoration: none; 
+            text-align: center;
         }
         .card-body h5 {
             color: #ff6347;
@@ -51,23 +51,11 @@
             text-decoration: none;
             color: #ff6347;
         }
-        .load-more-container {
-            text-align: center;
-            margin-top: 20px;
-        }
-        .load-more-container button {
-            background-color: #ff6347;
-            border-color: #ff6347;
-            color: #fff;
-        }
-        .load-more-container button:hover {
-            background-color: #ffa07a;
-            border-color: #ffa07a;
-        }
         .btn-custom {
             background-color: #ff6347;
             border-color: #ff6347;
             color: #fff;
+            margin-top: 10px;
         }
         .btn-custom:hover {
             background-color: #ffa07a;
@@ -76,7 +64,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container py-3">
         <h1 id="pokemon-name">Loading...</h1>
         <div id="pokemon-details" class="row justify-content-center"></div>
     </div>
@@ -101,7 +89,7 @@
                         const imageUrl = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/${id}.png`;
 
                         const details = `
-                            <div class="col-5">
+                            <div class="col-12 col-sm-10 col-md-8 col-lg-6">
                                 <div class="card mx-auto">
                                     <img src="${imageUrl}" class="card-img-top" alt="${pokemon.name}">
                                     <div class="card-body">
