--- a/AI-Info/index.html
+++ b/AI-Info/index.html
@@ -268,7 +268,7 @@
 
             const prices = cropPriceData[crop][region];
 
-            chart.data.datasets[0].label = `ราคา ${crop} (${region} ต่อ กิโลกรัม)`;
+            chart.data.datasets[0].label = `ราคา ${crop} (${region}บาท ต่อ กิโลกรัม)`;
             chart.data.datasets[0].data = prices;
             chart.update();
 
