--- a/AI-Info/index.html
+++ b/AI-Info/index.html
@@ -4,289 +4,55 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI วิเคราะห์ราคาพืชผล</title>
+    <title>Rice Dashboard</title>
+    <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/highcharts-3d.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <style>
         body {
             font-family: sans-serif;
-            margin: 0;
-            background: #f5f5f5;
-        }
-
-        header {
-            background: #2e7d32;
-            color: white;
-            padding: 1rem;
-            text-align: center;
-        }
-
-        .container {
-            padding: 1rem 2rem;
-            max-width: 1200px;
+            padding: 20px;
+            max-width: 900px;
             margin: auto;
         }
 
-        select {
-            padding: 0.5rem;
-            font-size: 1rem;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-        }
-
-        .card {
-            background: white;
-            border-radius: 10px;
-            padding: 1rem;
-            margin-bottom: 1.5rem;
-            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        h2 {
-            color: #2e7d32;
-            margin-bottom: 0.5rem;
-        }
-
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1rem;
-        }
-
-        input[type="text"],
-        button {
-            padding: 0.5rem;
-            font-size: 1rem;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            width: 300px;
-        }
-
-        .PDF {
-            text-align: center;
-            padding: 0.5rem;
-            margin: 20px;
-            background: #2e7d32;
-            color: white;
-            cursor: pointer;
-            margin-left: 0.5rem;
-        }
-
-        .note {
-            font-size: 0.9rem;
-            color: red;
-            margin-top: 0.5rem;
+        .chart-box {
+            margin-bottom: 40px;
         }
 
         canvas {
             max-width: 100%;
         }
 
-        .chart-placeholder {
-            background: #eee;
-            height: 200px;
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #888;
-            font-style: italic;
-        }
-
-        .btn-predict {
-            text-align: center;
-            width: 120px;
-            padding: 0.5rem;
-            margin: 20px;
-            background: #2e7d32;
-            color: white;
-            cursor: pointer;
-            margin-left: 0.5rem;
+        #minMaxText {
+            margin-top: 10px;
+            font-weight: bold;
+            color: #2c3e50;
         }
     </style>
 </head>
 
 <body>
-
-    <header>
-        <h1>📊 ระบบ AI วิเคราะห์ราคาพืชผล</h1>
-        <p>ข้อมูลราคาพืชผล แนวโน้ม และคำแนะนำสำหรับเกษตรกร</p>
-    </header>
-
     <div class="container">
+        <h1>📈 Dashboard ราคาข้าว</h1>
 
-        <div class="card">
-            <h2>🔍 ทำนายราคาพืชผล</h2>
-            <label for="cropInput">กรอกชื่อพืชที่ต้องการทำนาย:</label><br><br>
-            <input type="text" id="cropInput" list="cropList" placeholder="เช่น ข้าวโพดเลี้ยงสัตว์, ถั่วเหลือง">
-            <datalist id="cropList">
-                <option value="ข้าวโพดเลี้ยงสัตว์">
-                <option value="ถั่วเหลือง">
-                <option value="ข้าวหอมมะลิ">
-                <option value="ยางพารา">
-                <option value="มันสำปะหลัง">
-                <option value="อ้อย">
-                <option value="ปาล์มน้ำมัน">
-            </datalist>
-            <label for="regionSelect">เลือกภาค:</label>
-            <select id="regionSelect">
-                <option value="ทั่วประเทศ">ทั่วประเทศ</option>
-                <option value="ภาคกลาง">ภาคกลาง</option>
-                <option value="ภาคเหนือ">ภาคเหนือ</option>
-                <option value="ภาคตะวันออกเฉียงเหนือ">ภาคตะวันออกเฉียงเหนือ</option>
-                <option value="ภาคใต้">ภาคใต้</option>
-            </select>
-            <button class="btn-predict" onclick="predict()">🔍 พยากรณ์</button>
-            <div class="note">* พืชอย่าง “อ้อย” และ “มันสำปะหลัง” จะพยากรณ์แบบรายปี</div>
+        <label for="yearSelect">เลือกปี:</label>
+        <select id="yearSelect"></select>
+
+        <div class="chart-box">
+            <canvas id="lineChart" width="800" height="400"></canvas>
+            <p id="minMaxText"></p>
         </div>
 
-        <div class="card">
-            <h2>📈 การพยากรณ์ราคา</h2>
-            <canvas id="priceChart"></canvas>
-        </div>
-
-        <div class="card">
-            <h2>🌾 ราคาพืชผลล่าสุด</h2>
-            <div class="grid">
-                <div><strong>ข้าวหอมมะลิ:</strong> 14,000 บาท/ตัน</div>
-                <div><strong>มันสำปะหลัง:</strong> 2.8 บาท/กก. <span class="note">(พยากรณ์รายปี)</span></div>
-                <div><strong>อ้อย:</strong> 1,100 บาท/ตัน <span class="note">(พยากรณ์รายปี)</span></div>
-                <div><strong>ยางพารา:</strong> 45 บาท/กก.</div>
-                <div><strong>ข้าวโพดเลี้ยงสัตว์:</strong> 8.5 บาท/กก.</div>
-                <div><strong>ถั่วเหลือง:</strong> 18 บาท/กก.</div>
-                <div><strong>ปาล์มน้ำมัน:</strong> 4.2 บาท/กก.</div>
-            </div>
-        </div>
-
-        <div class="card">
-            <h2>🧭 คำแนะนำจาก AI</h2>
-            <ul>
-                <li>🌿 แนะนำให้ปลูก "ข้าวโพดเลี้ยงสัตว์" ในภาคเหนือช่วงฤดูฝน</li>
-                <li>⚠️ หลีกเลี่ยงการปลูก "อ้อย" ในภาคกลางปีนี้ (ราคามีแนวโน้มลดลง)</li>
-            </ul>
-        </div>
-
-        <div class="card">
-            <h2>🗺️ แผนที่ความเสี่ยง</h2>
-            <div class="chart-placeholder">[แผนที่พื้นที่เสี่ยงและความเหมาะสม]</div>
-        </div>
-
-        <div class="card">
-            <h2>📤 ดาวน์โหลดรายงาน</h2>
-            <button class="PDF">📄 ดาวน์โหลด PDF พื้นที่ของฉัน</button>
+        <h2>📊 สัดส่วนราคาเฉลี่ยข้าวรายไตรมาส</h2>
+        <div class="chart-box">
+        <div id="pieChart3D"></div>
         </div>
     </div>
 
-    <script>
-        const cropPriceData = {
-            'ข้าวโพดเลี้ยงสัตว์': {
-                'ภาคกลาง': [8.2, 8.6, 8.5, 8.3],
-                'ภาคเหนือ': [8.1, 8.4, 8.6, 8.2],
-                'ภาคตะวันออกเฉียงเหนือ': [7.9, 8.2, 8.3, 8.0],
-                'ภาคใต้': [8.0, 8.3, 8.4, 8.1],
-                'ทั่วประเทศ': [8.1, 8.5, 8.4, 8.2]
-            },
-            'ถั่วเหลือง': {
-                'ภาคกลาง': [17.5, 18, 18.2, 17.8],
-                'ภาคเหนือ': [17.8, 18.1, 18.3, 18],
-                'ภาคตะวันออกเฉียงเหนือ': [17.3, 17.7, 18, 17.5],
-                'ภาคใต้': [17.2, 17.6, 17.9, 17.4],
-                'ทั่วประเทศ': [17.4, 18.1, 17.7, 18.5]
-
-            },
-            'ข้าวหอมมะลิ': {
-                'ภาคกลาง': [13500, 14000, 13800, 14200],
-                'ภาคเหนือ': [13600, 14100, 13900, 14300],
-                'ภาคตะวันออกเฉียงเหนือ': [13400, 13900, 13700, 14100],
-                'ภาคใต้': [13300, 13800, 13600, 14000],
-                'ทั่วประเทศ': [13400, 13800, 13700, 14000]
-            },
-            'ยางพารา': {
-                'ภาคกลาง': [43, 45, 44.5, 44],
-                'ภาคใต้': [42.5, 44.5, 44, 43.5],
-                'ภาคเหนือ': [41, 42, 42.5, 42],
-                'ภาคตะวันออกเฉียงเหนือ': [42, 43, 43.5, 43],
-                'ทั่วประเทศ': [42, 43, 43.4, 42.5]
-            },
-            'มันสำปะหลัง': {
-                'ภาคกลาง': [2.5, 2.7, 2.8, 2.9],
-                'ภาคใต้': [2.3, 2.5, 2.6, 2.7],
-                'ภาคเหนือ': [2.4, 2.6, 2.7, 2.8],
-                'ภาคตะวันออกเฉียงเหนือ': [2.5, 2.7, 2.8, 2.9],
-                'ทั่วประเทศ': [2.5, 2.7, 2.4, 2.3]
-
-            },
-            'อ้อย': {
-                'ภาคใต้': [1000, 1050, 1020, 1080],
-                'ภาคกลาง': [1050, 1100, 1080, 1110],
-                'ภาคเหนือ': [1030, 1080, 1060, 1090],
-                'ภาคตะวันออกเฉียงเหนือ': [1045, 1095, 1075, 1105],
-                'ทั่วประเทศ': [1020, 1030, 1085, 1100]
-
-            },
-            'ปาล์มน้ำมัน': {
-                'ภาคใต้': [4.0, 4.2, 4.3, 4.1],
-                'ภาคกลาง': [4.1, 4.3, 4.4, 4.2],
-                'ภาคเหนือ': [3.9, 4.1, 4.2, 4.0],
-                'ภาคตะวันออกเฉียงเหนือ': [4.0, 4.2, 4.3, 4.1],
-                'ทั่วประเทศ': [4.2, 4.1, 4.4, 4.7, 3.9]
-
-            }
-        };
-
-
-        const ctx = document.getElementById('priceChart').getContext('2d');
-        const chart = new Chart(ctx, {
-            type: 'line',
-            data: {
-                labels: ['Q1 (ม.ค.-มี.ค.)', 'Q2 (เม.ย.-มิ.ย.)', 'Q3 (ก.ค.-ก.ย.)', 'Q4 (ต.ค.-ธ.ค.)'],
-                datasets: [{
-                    label: '',
-                    data: [],
-                    borderColor: '#2e7d32',
-                    backgroundColor: 'rgba(46,125,50,0.1)',
-                    fill: true,
-                    tension: 0.4
-                }]
-            },
-            options: {
-                responsive: true,
-                plugins: {
-                    legend: { position: 'top' },
-                    title: {
-                        display: true,
-                        text: 'แนวโน้มราคาพืชผลรายไตรมาส (จำลองข้อมูล)'
-                    },
-                    tooltip: {
-                        callbacks: {
-                            label: function (context) {
-                                return `${context.dataset.label}: ${context.parsed.y} บาทต่อกิโลกรัม`;
-                            }
-                        }
-                    }
-                }
-            }
-
-        });
-
-        function predict() {
-                const crop = document.getElementById('cropInput').value.trim();
-                const region = document.getElementById('regionSelect').value;
-
-                if (!cropPriceData[crop] || !cropPriceData[crop][region]) {
-                    alert(`❌ กรุณาใส่ข้อมูลพืชที่ถูกต้องในการทำนาย "${crop}" ใน ${region}`);
-                    return;
-                }
-
-                const prices = cropPriceData[crop][region];
-
-                chart.data.datasets[0].label = `ราคาของ ${crop} ใน ${region} (บาทต่อกิโลกรัม)`;
-                chart.data.datasets[0].data = prices;
-                chart.update();
-            }
-
-    </script>
-
-
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
